# dsp-library

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Makefile.lin  Makefile.win  README.md  build-aqua.bat  dsp-client.c  dsp-client.h  dsp-service.c  dsp-service.h  dsp.c  dsp.h  linux.mk  protocol.h  winmake.bat
c/: Makefile  dsp.c  dsp.h
client/: client-call.c  client-connect.c  dsp-client.c
client/include/: client-call.h  client-connect.h  dsp-client.h
include/: aqua-sync.h  aqua-types.h  dsp.h  protocol.h  system-values.h
initializer/: initializer.c
log/: log.h
platform/include/: platform.h
platform/linux/alloc/: alloc.c
platform/linux/include/: platform-types.h
platform/linux/memory/: memory.c
platform/linux/shared-memory-object/: shared-memory-object.c
platform/linux/sync/: sync.c
platform/windows/include/: platform-types.h
service/: call.c  dsp-service.c  install.c  return.c
service/include/: call.h  dsp-service.h  install.h  return.h
test/cpp/client/: Makefile  Makefile.win  main.cpp
test/cpp/service/xslt-transformation/: Makefile  Makefile.win  build.bat  main.cpp  winmake.bat
test/java/service/xslt-transformation/: .gitignore  Makefile  build.gradle
test/java/service/xslt-transformation/src/: ConnectQueue.java  ConnectResponseQueue.java  Constants.java  DSPQueue.java  DisconnectQueue.java  HMBCall.java  HMBDSPQueue.java  Main.java  QMBCall.java  QMBDSPQueue.java  ServiceCallInfo.java  ServiceConnectInfo.java  ServiceReturnInfo.java
test/java/service/xslt-transformation/src/call/: DMBCall.java  EMBCall.java  GBCall.java  HGBCall.java  HMBCall.java  MBCall.java  QMBCall.java  SMBCall.java  ServiceCallInfo.java  ServiceReturnInfo.java
test/java/service/xslt-transformation/src/call/abstract_classes/: Call.java  CallMetadata.java
test/java/service/xslt-transformation/src/call/commons/: CallMetadata.java
test/java/service/xslt-transformation/src/call/interfaces/: ReceiveCallFn.java  ReceiveCallFnHMB.java  ReceiveCallFnQMB.java  SendReturnFn.java  SendReturnFnHMB.java  SendReturnFnQMB.java
test/java/service/xslt-transformation/src/calling/abstract_classes/: Call.java
test/java/service/xslt-transformation/src/calling/call_package/: DMBCall.java  EMBCall.java  GBCall.java  HGBCall.java  HMBCall.java  MBCall.java  QMBCall.java  SMBCall.java  ServiceCallInfo.java
test/java/service/xslt-transformation/src/calling/commons/: CallMetadata.java
test/java/service/xslt-transformation/src/calling/interfaces/: Call.java  ReceiveCallFn.java  SendReturnFn.java
test/java/service/xslt-transformation/src/calling/return_package/: DMBReturn.java  EMBReturn.java  GBReturn.java  HGBReturn.java  HMBReturn.java  MBReturn.java  QMBReturn.java  SMBReturn.java  ServiceReturnInfo.java
test/java/service/xslt-transformation/src/connect/: ConnectResponseInformation.java  ServiceConnectInfo.java
test/java/service/xslt-transformation/src/connect/interfaces/: ReceiveConnectRequest.java  ReceiveDisconnectRequest.java
test/java/service/xslt-transformation/src/consts/: Constants.java
test/java/service/xslt-transformation/src/main/: Main.java
test/java/service/xslt-transformation/src/queues/: ConnectQueue.java  ConnectResponseQueue.java  DSPQueue.java  DisconnectQueue.java  HMBDSPQueue.java  QMBDSPQueue.java
test/java/service/xslt-transformation/src/queues/abstract_classes/: DSPQueue.java  Queue.java
test/java/service/xslt-transformation/src/queues/commons/: ConnectResponseInformation.java  DSPQueueMetadata.java
test/java/service/xslt-transformation/src/throughput/: Main.java
test/java/service/xslt-transformation/src/uds/: Main.java  Makefile
test/java/service/xslt-transformation/src/uds/throughput/: Main.java
test/java/service/xslt-transformation/src/zeromq/: Main.java  Makefile
test/java/service/xslt-transformation/src/zeromq/throughput/: Main.java
test/java/service/xslt-transformation/transformations/: transform_version_v6.xsl  transform_version_v7.xsl
test/php/client/: .gitignore  benchmark-throughput.sh  benchmark.sh  create_combined_plots.py  create_combined_plots_throughput.py  create_merged_plots.py  create_plots.py  generate_plots.sh  main.php  requirements.txt  start_benchmark.sh  throughput.php
test/php/client/uds/: benchmark-throughput.sh  benchmark.sh  create_plots.py  main.php  throughput.php
test/php/client/zeromq/: benchmark-throughput.sh  benchmark.sh  main.php  throughput.php
utils/: commons.c  commons.h  system-types.h  system-values.h
utils/exit/: exit_header.h
utils/hashmap/: hashmap.h
utils/locking/: locking.c  locking.h
utils/log/: log.h
utils/macros/: macros.h
